--- a/test.html
+++ b/test.html
@@ -173,7 +173,7 @@
           <p>If you'd like to learn more about me and what I do, feel free to cick on the links in the navigation window to the left!</p>
         </div>
         <div class="bar">
-          
+          <img style="height:100%;" src="https://raw.githubusercontent.com/abrookst/abrookst.github.io/main/images/start.png">
         </div>  
       </div>
     </div>
