--- a/test.html
+++ b/test.html
@@ -38,8 +38,7 @@
       .navblock {
         background: #dfdedf;
         display: inline-block;
-        border: 3px solid #a8a8a8;
-        border-style: outset;
+        border: 3px outset #a8a8a8;
         width: 300px;
         height: 85vh;
         overflow-y: hidden;
@@ -50,8 +49,7 @@
       .contentblock {
         background: #dfdedf;
         display: inline-block;
-        border: 3px solid #a8a8a8;
-        border-style: outset;
+        border: 3px outset #a8a8a8;
         width: 600px;
         height: 85vh;
         overflow-y: hidden;
@@ -106,11 +104,15 @@
         margin: 0;
       }
       .bar { 
-        height: 3vh; 
+        height: 4vh; 
         position: fixed; 
         bottom:0%;
-        width:100%; 
+        left:0%;
+        padding-top: 3px;
+        padding-bottom: 3px;
+        width:100vh; 
         background-color: #a8a8a8; 
+        border: 3px outset #a8a8a8;
       }
 
 	/* for phones*/
@@ -120,6 +122,7 @@
   .contentN {height: 22vh; overflow-y: hidden;}
   .contentblock {width: 100vh; height: 50vh;}
   .contentC {height: 42vh; overflow-y: scroll; word-wrap: break-word;}
+  .bar{display:none;}
   
 }
 /* for zflip phones*/
@@ -176,6 +179,7 @@
     </div>
     <div class="bar">
       <img style="height:100%;" src="https://raw.githubusercontent.com/abrookst/abrookst.github.io/main/images/start.png">
+
     </div>  
   </body>
 </html>
