--- a/test.html
+++ b/test.html
@@ -110,7 +110,7 @@
         left:0%;
         padding-top: 3px;
         padding-bottom: 3px;
-        width:100vh; 
+        width:100%; 
         background-color: #a8a8a8; 
         border: 3px outset #a8a8a8;
       }
