--- a/sites/blog.html
+++ b/sites/blog.html
@@ -161,15 +161,21 @@
         <div class="contentC">
   
           <hr>
+          <p>Seeing Neil deGrasse Tyson</p>
+          <p>Oct 27th 2022</p>
+          <u><a href="https://abrookst.github.io/sites/blogs/2022/neil.html"><p>>>Click here to read</p></a></u>
+          <hr>
+
+          <hr>
           <p>The Metaverse</p>
           <p>Sep 30th 2022</p>
-          <u><a href="https://abrookst.github.io/sites/blogs/metaverse.html"><p>>>Click here to read</p></a></u>
+          <u><a href="https://abrookst.github.io/sites/blogs/2022/metaverse.html"><p>>>Click here to read</p></a></u>
           <hr>
         
           <hr>
           <p>Welcome To My Site!</p>
           <p>May 10th 2022</p>
-          <u><a href="https://abrookst.github.io/sites/blogs/welcometomysite.html"><p>>>Click here to read</p></a></u>
+          <u><a href="https://abrookst.github.io/sites/blogs/2022/welcometomysite.html"><p>>>Click here to read</p></a></u>
           <hr>
 
         </div>
