--- a/sites/about.html
+++ b/sites/about.html
@@ -174,21 +174,21 @@
               <br>
               <!--TLDR-->
               <div id='tldr' class='subdescrip'>Hi! I'm Ali.</div>
-              <div id='tldr' class='subdescrip'>I go 2 RPI 4 CS & I &#60;3 CS!</div>  
+              <div id='tldr' class='subdescrip'>I go 2 RPI 4 CS/ITWS & I &#60;3 CS/ITWS!</div>  
               <!--Default-->
-              <div id='default' class='subdescrip'>Hello! My name is Ali Brooks.</div>
-              <div id='default' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer.</div>
-              <div id='default' class='subdescrip'>I'm attending at Rensslear Polytechnic Institute for my Bachelors in Computer Science.</div>
-              <div id='default' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
-              <div id='default' class='subdescrip'>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!</div>
+              <div id='default' class='subdescrip'>Hello! My name is Ali Brooks.<br></div>
+              <div id='default' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer.<br></div>
+              <div id='default' class='subdescrip'>I'm attending at Rensslear Polytechnic Institute for my Bachelors in Computer Science with a dual in ITWS.<br></div>
+              <div id='default' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.<br></div>
+              <div id='default' class='subdescrip'>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!<br></div>
               <!--TMI-->
-              <div id='TMI' class='subdescrip'>Greetings! It's very nice to meet you, my name is Ali Brooks.</div>
-              <div id='TMI' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!</div>
-              <div id='TMI' class='subdescrip'>I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).</div>
-              <div id='TMI' class='subdescrip'>I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Java Data Structures in Honors Advanced Topics In Computer Science.</div>
-              <div id='TMI' class='subdescrip'>While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.</div>
-              <div id='TMI' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
-              <div id='TMI' class='subdescrip'>Outside of that, I love reading, writing, playing video games, working at cat shelters, working in bee hives, and diving down research rabbit holes to scratch my curiosity itch! I've also been practicing my art.</div>
+              <div id='TMI' class='subdescrip'>Greetings! It's very nice to meet you, my name is Ali Brooks.<br></div>
+              <div id='TMI' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!<br></div>
+              <div id='TMI' class='subdescrip'>I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I am dualing in ITWS (Information Technology and Web Sciences).<br></div>
+              <div id='TMI' class='subdescrip'>I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Java Data Structures in Honors Advanced Topics In Computer Science.<br></div>
+              <div id='TMI' class='subdescrip'>While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.<br></div>
+              <div id='TMI' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.<br></div>
+              <div id='TMI' class='subdescrip'>Outside of that, I love reading, writing, playing video games, working at cat shelters, working in bee hives, and diving down research rabbit holes to scratch my curiosity itch! I've also been practicing my art.<br></div>
             </div>
             <script>
               const textModules = document.getElementsByClassName('text-module');
