--- a/sites/blog.html
+++ b/sites/blog.html
@@ -147,6 +147,7 @@
           <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>Portfolio</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
           <a href="https://abrookst.github.io/sites/blog.html"><p>>>>Blog</p></a>
+          <a href="https://abrookst.github.io/sites/resume.html"><p>>>Resume</p></a>
         </div>
       </div>
       <div class="contentblock">
